src/test/ui/issues/issue-5XXXX/issue-50802.stderr
error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-50802.rs:5:21
   |
LL |         break while continue {
   |                     ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0590`.
